KakaoTalk Login 라이브러리 설치

--- a/MyFinalProject_210910/app/src/main/res/values/strings.xml
+++ b/MyFinalProject_210910/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MyFinalProject_210910</string>
     <string name="facebook_app_id">271307427947521</string>
     <string name="fb_login_protocol_scheme">fb271307427947521</string>
+    <string name="kakao_app_key">271307427947521</string>
 </resources>
